# Compressy

./: .gitignore  CHANGELOG.md  README.md  code_cleanup.py  codebase_scan.py  compress.py  compressy.py  package-lock.json  pyproject.toml  pytest.ini
.github/workflows/: dependency-update.yml  lint.yml  pr-checks.yml  release.yml  security.yml  tests.yml
compressy/: __init__.py  __main__.py  cli.py
compressy/core/: __init__.py  config.py  ffmpeg_executor.py  image_compressor.py  media_compressor.py  video_compressor.py
compressy/services/: __init__.py  backup.py  reports.py  statistics.py
compressy/utils/: file_processor.py  format.py  logger.py
docs/: developer-packaging.md  virtual-environments.md
tests/: README.md  conftest.py  test_compressy_main.py
tests/test_core/: test_config.py  test_ffmpeg_executor.py  test_media_compressor.py  test_video_compressor.py
tests/test_integration/: test_end_to_end.py
tests/test_services/: test_backup.py  test_reports.py  test_statistics.py
tests/test_utils/: fixtures.py  mocks.py  test_file_processor.py  test_format.py  test_logger.py
